1.0.6:
* added option to perform hierarchical clustering on gmtk parameters row-wise

1.0.5:
* fixed the inconsistency in row ordering of dataframes
* added option to normalize gmtk parameters table row-wise
* add genic overlap percentage
* create gmtk-parameter heatmap from params.params or input.master
* add mne parameter to change track and segment label labels

1.0.4:
* init